Convert atlas workflow to HoloViews
Switched from Prostate data to an HTAN dataset in T-cells.

The environment.yml now installs an hv-anndata commit with a DotPlot

The UMAP is still the built-in scanpy matplotlib plot instead of
a HoloViews plot, we may want to convert to the one in
00_FeatureMap.ipynb

--- a/environment.yml
+++ b/environment.yml
@@ -25,3 +25,6 @@ dependencies:
   - scikit-image
   - sparse
   - decoupler-py
+  - pip
+  - pip:
+     - git+https://github.com/holoviz-topics/hv-anndata.git@68501d79031818bdd35b1985ec1b07943f0abf77
